Added consolidate and swig
I added consolidate to package.json and reran the app. Consolidate
failed to find the swig module so I added that as well. Now the app
runs as expected.

fixes macskay/pasteit#3

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "code"
   ],
   "author": "Maximilian Klingmann",
-  "license": "GPL-3.0"
+  "license": "GPL-3.0",
+  "dependencies": {
+    "package.json": "^2.0.1"
+  }
 }
