--- a/pasteit/package.json
+++ b/pasteit/package.json
@@ -6,15 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "base-64": "^0.1.0",
     "body-parser": "^1.18.2",
     "consolidate": "^0.14.5",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "ejs": "^2.5.7",
     "express": "~4.15.5",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5",
     "stylus": "0.54.5",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "uuid4": "^1.0.0"
   }
 }
