--- a/pasteit/package.json
+++ b/pasteit/package.json
@@ -15,6 +15,7 @@
     "express": "~4.15.5",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
+    "redis": "^2.8.0",
     "serve-favicon": "~2.4.5",
     "stylus": "0.54.5",
     "swig": "^1.4.2",
