--- a/pasteit/package.json
+++ b/pasteit/package.json
@@ -20,5 +20,8 @@
     "stylus": "0.54.5",
     "swig": "^1.4.2",
     "uuid4": "^1.0.0"
+  },
+  "devDependencies": {
+    "eslint-config-google": "^0.9.1"
   }
 }
